--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
 
         <ul id="todo_list">
             <li class="todo_item">
-                <input class="checkbox" type="checkbox">
-                <label class="title">Изучить JavaScript</label>
-                <input class="textfield" type="text">
-                <button class="edit">Именить</button>
-                <button class="delete">Удалить</button>
+                <input class="todo_item__checkbox" type="checkbox">
+                <label class="todo_item__title">Изучить JavaScript</label>
+                <input class="todo_item__textfield" type="text">
+                <button class="todo_item__edit">Именить</button>
+                <button class="todo_item__delete">Удалить</button>
             </li>
         </ul>
 
