--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <li class="todo_item">
                 <input class="todo_item__checkbox" type="checkbox">
                 <label class="todo_item__title">Изучить JavaScript</label>
-                <input class="todo_item__textfield" type="text">
+                <input class="todo_item__text" type="text">
                 <button class="todo_item__edit">Именить</button>
                 <button class="todo_item__delete">Удалить</button>
             </li>
